--- a/SEOCursos/app/src/main/AndroidManifest.xml
+++ b/SEOCursos/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:label">
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,7 +49,8 @@
         <activity android:name=".EditTarefaActivity" />
         <activity android:name=".EditEventoActivity" />
         <activity android:name=".EditDisciplinaActivity" />
-        <activity android:name=".EditCursoActivity"/>
+        <activity android:name=".EditCursoActivity" />
+        <activity android:name=".InfoCursoActivity"/>
     </application>
 
 </manifest>
