--- a/SEOCursos/app/build.gradle
+++ b/SEOCursos/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.facebook.android:facebook-login:[4,5)'
-    compile 'com.google.android.gms:play-services-auth:11.8.0'
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.6.1'
 }
