--- a/SEOCursos/app/build.gradle
+++ b/SEOCursos/app/build.gradle
@@ -18,6 +18,7 @@ android {
     }
 }
 
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -35,4 +36,5 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:[4,5)'
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.github.barteksc:android-pdf-viewer:2.6.1'
+    implementation 'com.github.omadahealth:swipy:1.2.3@aar'
 }
