--- a/SEOCursos/app/src/main/AndroidManifest.xml
+++ b/SEOCursos/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -140,7 +141,8 @@
             android:name=".RespostaTarefaActivity"
             android:label="@string/responderTarefa" />
         <activity android:name=".GraficosActivity" />
-        <activity android:name=".EbooksActivity"></activity>
+        <activity android:name=".EbooksActivity" />
+        <activity android:name=".RespostasActivity"></activity>
     </application>
 
 </manifest>
