--- a/SEOCursos/app/build.gradle
+++ b/SEOCursos/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "br.com.seocursos.seocursos"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.github.barteksc:android-pdf-viewer:2.6.1'
     implementation 'com.github.omadahealth:swipy:1.2.3@aar'
+    compile 'com.flurry.android:analytics:11.0.0@aar'
 }
